# jfj-utils

./: README.md  __init__.py  pyproject.toml  setup.py  utils.py
data_preprocessing/: __init__.py  class_imbalance.py  cleaning.py  dimensionality_reduction.py  encoding.py  famd.py  feature_engineering.py  mca.py  missing.py  normalizing.py  outliers.py  pca.py  scaling.py  text_cleaning.py
eda/: __init__.py  best_transformation.py  calculate_vif.py  check_normality.py  chi_square_test.py  classification.py  dates  describe_structure.py  explainability.py  full_eda_summary.py  multicollinearity.py  premodeling_check.py  regression.py  statistics.py  stats_diagnostics.py  stats_non_param.py  stats_param.py  topic_sentiment_analysis.py  transformation.py
feature_engineering/: __init__.py
ingestion/: readers.py
modeling/: advanced_models.py  binary_classifier_evaluation.py  check_model_stability.py  classification.py  classification_models.py  classification_trees.py  clustering_models.py  model_stability.py  regression.py  regression_models.py  regression_stacking.py  regression_trees.py  regularization.py  stacking.py
optimization/: monte_carlo_analysis.py
preprocessing/: missing.py  name_cleaning.py  outliers.py  pca.py
tests/data_preprocessing/: test_binary_encode_columns.py  test_class_imbalance_correction.py  test_clean_names.py  test_clean_names_multiple.py  test_clean_text.py  test_column_selector.py  test_detect_outliers_iqr.py  test_detect_outliers_zscore.py  test_label_encode_columns.py  test_mi_classification.py  test_mi_regression.py  test_minmax_scaler.py  (+12 more)
visualization/: chi_square_heatmap.py  choropleth_map.py  confusion_matrix.py  eda.py  explore_binary.py  explore_classification.py  explore_clusters.py  explore_continuous.py  explore_discrete.py  explore_discrete_bivariate.py  explore_discrete_multivariate.py  explore_numeric.py  explore_regression.py  explore_time.py  model_diagnostics.py  predicted_actual.py  scree_biplot.py  style.py  text_exploration.py
(+64 files in other folders)
