[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfj-utils"
version = "0.1.0"
description = "A lightweight and evolving collection of Python utilities designed to support analytics workflows."
readme = "README.md"
authors = [
  { name = "JF Jutras", email = "jfjutras07@hotmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["utilities", "analytics", "eda", "data-science", "modeling"]

dependencies = []

[project.urls]
"Repository" = "https://github.com/jfjutras07/jfj-utils"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.0.280"
]

eda = [
  "pandas>=2.0",
  "numpy>=1.25",
  "scipy>=1.11"
]

viz = [
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "plotly>=6.0"
]

nlp = [
  "nltk>=3.9",
  "wordcloud>=1.9",
  "gensim>=4.3"
]

ml = [
  "scikit-learn>=1.3"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true
